Fixed basic layout for board so horizontal overflow scrolls

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ html {
   display: grid;
   grid-template-columns: 15rem 1fr;
   font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+  width: 100vw;
+}
+
+.pageContainer {
+  width: 100%;
+  overflow: auto;
 }
 
 .rightFlex {
