--- a/src/Database.css
+++ b/src/Database.css
@@ -141,13 +141,14 @@ button.viewButton {
 }
 
 .boardColumn {
-  width: 263px;
+  flex: 0 0 auto;
+  width: 260px;
+  padding: 1px;
 }
 
 .card {
   width: 100%;
   box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 2px 4px;
-  border-left: 1px solid rgba(15, 15, 15, 0.1);
   border-radius: 3px;
   margin-bottom: 5px;
   background: white;
